# book_apps

./: .gitignore  .pre-commit-config.yaml  build.sh  pyproject.toml  render.yaml
.github/workflows/: three-stage.yml
accounts/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile.py
books/: admin.py  models.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_review.py  0003_book_cover.py  0004_alter_book_options.py  0005_book_id_index.py  0006_image.py
config/: asgi.py  env.py  urls.py  wsgi.py
config/django/: base.py  local.py  production.py  tests.py
config/settings/: storage.py
config/templates/: components.yaml
core/: settings.py  urls.py
core/templates/partials/: navbar.html
pages/: tests.py  views.py
pages/templates/: _base.html  about.html  home.html
pages/templates/account/: login.html  logout.html  signup.html
pages/templates/registration/: login.html  signup.html
static/css/: base.css
templates/: _base.html  components.yaml  home.html
templates/account/email/: email_confirmation_subject.txt
templates/books/: book_detail.html  book_list.html  card.html  search_results.html
templates/partials/: navbar.html
