[project]
name = "book_apps"
version = "0.1.0"
description = "just_an_other_app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "cloudinary>=1.44.1",
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-allauth>=65.13.1",
    "django-allauth-ui>=1.8.1",
    "django-crispy-forms>=2.5",
    "django-debug-toolbar>=6.2.0",
    "django-environ>=0.12.0",
    "environs>=14.5.0",
    "gunicorn>=24.1.1",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.14.14",
    "uvicorn>=0.40.0",
    "whitenoise>=6.11.0",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
exclude = ["migrations"]
